examples/test/testpolicy1670.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1670
  namespace: namespace464
spec:
  podSelector:
    matchLabels:
      key33: value39
      key46: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key6: value38
      podSelector:
        matchLabels:
          key9: value17
          key46: value30
          key43: value27
